[project]
name = "hakathon-starter-kit"
version = "0.1.0"
description = "Universal AI Hakathon Starter Kit Template"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
